--- a/Pages/UpdateUserAccessControl.cshtml
+++ b/Pages/UpdateUserAccessControl.cshtml
@@ -43,7 +43,7 @@
                     <!-- Profile Dropdown -->
                     <div class="mb-3">
                         <label for="ProfileId" class="form-label" style="font-size:1.2rem;">Select Profile</label>
-                        <select id="ProfileId" class="form-control" name="ProfileId" style="font-size:1.2rem;">
+                        <select id="ProfileId" class="form-select" name="ProfileId" style="font-size:1.2rem;">
                             <option value="" disabled selected>Select a Profile</option>
                             @foreach (var profile in Model.AllProfilesData)
                             {
