--- a/Pages/CreateUserAccessControl.cshtml
+++ b/Pages/CreateUserAccessControl.cshtml
@@ -52,7 +52,7 @@
                         <!-- Profile Dropdown -->
                         <div class="col mb-3" id="profileDropdownDiv" style="display:none;">
                             <label for="ProfileId" class="form-label" style="font-size:1.2rem;">Select Profile</label>
-                            <select id="ProfileId" class="form-control" name="ProfileId" style="font-size:1.2rem;">
+                            <select id="ProfileId" class="form-select" name="ProfileId" style="font-size:1.2rem;">
                                 <option value="" disabled selected>Select a Profile</option>
                                 @foreach (var profile in Model.AllProfilesData)
                                 {
