--- a/Pages/CreateUserProfile.cshtml
+++ b/Pages/CreateUserProfile.cshtml
@@ -29,89 +29,101 @@
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     <form method="post">
-        <div id="createProfileSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:60%;font-size:2rem;">
+        <div id="createProfileSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:60%;">
 
-            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around; height:auto; flex-direction:column; font-size:1.5rem;">
+            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around; height:auto; flex-direction:column;">
                 <div class="row pb-1 pt-2">
-                    <h2 style="color:#17a2b8; text-align:center; font-size:2rem;">Create User</h2>
+                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;" class="fw-bold">Create User</div>
                     <div>
                         <hr />
                     </div>
                 </div>
-
-                <!-- User ID and ID Number on one line -->
-                <div class="mb-3" style="display: flex; justify-content: space-between;">
-                    <div style="flex: 1;">
-                        <label asp-for="ProfileUsersData.IdNumber" class="form-label" style="font-size:1.2rem;"></label>
-                        <input asp-for="ProfileUsersData.IdNumber" placeholder="National/Iqama Number" class="form-control" />
-                        <span asp-validation-for="ProfileUsersData.IdNumber" class="text-danger fw-bold" style="font-size: 1.2rem;"></span>
-                    </div>
-                </div>
-
-                <!-- Full Name Field -->
-                <div class="mb-3">
-                    <label asp-for="ProfileUsersData.FullName" class="form-label" style="font-size:1.2rem;"></label>
-                    <input asp-for="ProfileUsersData.FullName" placeholder="Full Name" class="form-control" style="font-size:1.2rem;" />
-                    <span asp-validation-for="ProfileUsersData.FullName" class="mt-auto text-danger fw-bold" style="font-size:1.2rem;"></span>
-                </div>
-
-                <!-- Email and Mobile Number on one line -->
-                <div class="mb-3" style="display: flex; justify-content: space-between;">
-                    <div style="flex: 1; margin-right: 10px;">
-                        <label asp-for="ProfileUsersData.Email" class="form-label" style="font-size:1.2rem;"></label>
-                        <input asp-for="ProfileUsersData.Email" placeholder="Email Address" class="form-control" />
-                        <span asp-validation-for="ProfileUsersData.Email" class="text-danger fw-bold" style="font-size: 1.2rem;"></span>
-                    </div>
-                    <div style="flex: 1;">
-                        <label asp-for="ProfileUsersData.MobileNo" class="form-label" style="font-size:1.2rem;"></label>
-                        <input asp-for="ProfileUsersData.MobileNo" placeholder="Mobile Number" class="form-control" />
-                        <span asp-validation-for="ProfileUsersData.MobileNo" class="text-danger fw-bold" style="font-size: 1.2rem;"></span>
-                    </div>
-                </div>
-
-                <!-- Dropdown to Select Profile Name -->
-                <!-- Profile Name Dropdown -->
-                <div class="mb-3">
-                    <label class="form-label" style="font-size:1.2rem;">Profile Name</label>
-                    <select asp-for="ProfileUsersData.ProfileSiteData.ProfileName" class="form-control" style="font-size:1.2rem;" id="profileSelect">
-                        <option value="" disabled selected>Select a Profile</option>
-                        @foreach (var profile in Model.ProfilesData)
-                        {
-                            <option value="@profile.ProfileName" data-profileid="@profile.ProfileId">@profile.ProfileName</option>
-                        }
-                    </select>
-                    <span asp-validation-for="ProfileUsersData.ProfileSiteData.ProfileName" class="text-danger fw-bold" style="font-size: 1.2rem;"></span>
-                </div>
-
-                <!-- Hidden fields Profile Id -->
-                <input type="hidden" asp-for="ProfileUsersData.ProfileSiteData.ProfileId" id="profileIdHidden" />
-
-                <!-- Hidden field for UserStatus -->
-                <input type="hidden" asp-for="ProfileUsersData.UserStatus" id="ProfileUsersData_UserStatus" />
-
-                <!-- Status with radio buttons on one line -->
-                <div class="mb-3" style="display: flex; justify-content: flex-start; align-items: center; font-size:1.2rem; column-gap:2rem">
-                    <label asp-for="ProfileUsersData.UserStatus" class="form-label" style="margin-right: 10px;">Status</label>
-                    @foreach (var checkbox in Model.Checkboxes)
-                    {
-                        <div>
-                            <input type="checkbox" class="form-input" name="UserStatusLst" id="checkbox_@checkbox.Value" value="@checkbox.Value" checked="@checkbox.IsChecked" />
-                            <label for="checkbox_@checkbox.Value" class="fw-normal" style="font-size:1.1rem">@checkbox.Text</label>
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-title fw-bold" style="font-size:1.2rem">User Details</div>
+                        <div class="card-tools">
+                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                <i class="fas fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-tool" data-card-widget="remove">
+                                <i class="fas fa-times"></i>
+                            </button>
                         </div>
-                    }
-                </div>
-            </div>
+                    </div>
+                    <div class="card-body">
+                        <!-- User ID and ID Number on one line -->
+                        <div class="mb-3" style="display: flex; justify-content: space-between;">
+                            <div style="flex: 1;">
+                                <label asp-for="ProfileUsersData.IdNumber" class="form-label" style=""></label>
+                                <input asp-for="ProfileUsersData.IdNumber" placeholder="National/Iqama Number" class="form-control" />
+                                <span asp-validation-for="ProfileUsersData.IdNumber" class="text-danger fw-bold" style=""></span>
+                            </div>
+                        </div>
 
-            <div class="container form-control border-2" style="display: flex; justify-content:space-around;height:auto;">
-                <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-3 me-4">
-                        <button type="submit" onclick="prepareFormSubmission()" class="btn" style="width:140px; background-color:#17a2b8;color:white">Create</button>
+                        <!-- Full Name Field -->
+                        <div class="mb-3">
+                            <label asp-for="ProfileUsersData.FullName" class="form-label" style=""></label>
+                            <input asp-for="ProfileUsersData.FullName" placeholder="Full Name" class="form-control" style="" />
+                            <span asp-validation-for="ProfileUsersData.FullName" class="mt-auto text-danger fw-bold" style=""></span>
+                        </div>
+
+                        <!-- Email and Mobile Number on one line -->
+                        <div class="mb-3" style="display: flex; justify-content: space-between;">
+                            <div style="flex: 1; margin-right: 10px;">
+                                <label asp-for="ProfileUsersData.Email" class="form-label" style=""></label>
+                                <input asp-for="ProfileUsersData.Email" placeholder="Email Address" class="form-control" />
+                                <span asp-validation-for="ProfileUsersData.Email" class="text-danger fw-bold" style=""></span>
+                            </div>
+                            <div style="flex: 1;">
+                                <label asp-for="ProfileUsersData.MobileNo" class="form-label" style=""></label>
+                                <input asp-for="ProfileUsersData.MobileNo" placeholder="Mobile Number" class="form-control" />
+                                <span asp-validation-for="ProfileUsersData.MobileNo" class="text-danger fw-bold" style=""></span>
+                            </div>
+                        </div>
+
+                        <!-- Dropdown to Select Profile Name -->
+                        <!-- Profile Name Dropdown -->
+                        <div class="mb-3">
+                            <label class="form-label" style="">Profile Name</label>
+                            <select asp-for="ProfileUsersData.ProfileSiteData.ProfileName" class="form-select" style="" id="profileSelect">
+                                <option value="" disabled selected>Select a Profile</option>
+                                @foreach (var profile in Model.ProfilesData)
+                                {
+                                    <option value="@profile.ProfileName" data-profileid="@profile.ProfileId">@profile.ProfileName</option>
+                                }
+                            </select>
+                            <span asp-validation-for="ProfileUsersData.ProfileSiteData.ProfileName" class="text-danger fw-bold" style=""></span>
+                        </div>
+
+                        <!-- Hidden fields Profile Id -->
+                        <input type="hidden" asp-for="ProfileUsersData.ProfileSiteData.ProfileId" id="profileIdHidden" />
+
+                        <!-- Hidden field for UserStatus -->
+                        <input type="hidden" asp-for="ProfileUsersData.UserStatus" id="ProfileUsersData_UserStatus" />
+
+                        <!-- Status with radio buttons on one line -->
+                        <div class="mb-3" style="display: flex; justify-content: flex-start; align-items: center;  column-gap:2rem">
+                            <label asp-for="ProfileUsersData.UserStatus" class="form-label" style="margin-right: 10px;">Status</label>
+                            @foreach (var checkbox in Model.Checkboxes)
+                            {
+                                <div>
+                                    <input type="checkbox" class="form-input" name="UserStatusLst" id="checkbox_@checkbox.Value" value="@checkbox.Value" checked="@checkbox.IsChecked" />
+                                    <label for="checkbox_@checkbox.Value" class="fw-normal">@checkbox.Text</label>
+                                </div>
+                            }
+                        </div>
+
+                        <div class="row">
+                            <div class="col-2"></div>
+                            <div class="col-3 me-4">
+                                <button type="submit" onclick="prepareFormSubmission()" class="btn" style="width:140px; background-color:#17a2b8;color:white">Create</button>
+                            </div>
+                            <div class="col-4 ms-3">
+                                <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                            </div>
+                            <div class="col-3"></div>
+                        </div>
                     </div>
-                    <div class="col-4 ms-3">
-                        <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
-                    </div>
-                    <div class="col-3"></div>
                 </div>
             </div>
         </div>
